fixed alignment issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6  {
 #nav-pages {
   position: relative !important;
   top: 20px !important;
-  left: -5px !important;
+  left: -45px !important;
   opacity: 1;
 }
 
